<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright (c) 2019 Mike Penz
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~        http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->

<resources>

    <string name="app_name">Android-Iconics</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_activity_playground">Playground</string>
    <string name="title_activity_automatic">Automatic Mapping</string>
    <string name="title_activity_old_automatic">Old Automatic Mapping</string>

    <string name="action_randomize">Randomize</string>
    <string name="action_shadow">Shadow</string>
    <string name="action_respect_bounds">Respect font bounds</string>
    <string name="action_opensource">Open Source</string>
    <string name="action_playground">Playground</string>
    <string name="action_automatic">Automatic Mapping</string>
    <string name="action_old_automatic">Old Automatic Mapping</string>
    <string name="search_title">Suche</string>
</resources>
