<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.mikepenz.iconics.sample.MainActivity">

    <item
        android:id="@+id/search"
        android:title="@string/search_title"
        app:actionViewClass="android.support.v7.widget.SearchView"
        app:showAsAction="collapseActionView|ifRoom" />

    <item
        android:id="@+id/action_randomize"
        android:checkable="true"
        android:title="@string/action_randomize" />
    <item
        android:id="@+id/action_opensource"
        android:title="@string/action_opensource"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_playground"
        android:title="@string/action_playground"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_automatic"
        android:title="@string/action_automatic"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_old_automatic"
        android:title="@string/action_old_automatic"
        app:showAsAction="never" />
</menu>
